- runtime improvement (only new data is loaded) - renamed several swagger functions to be more consistent - bugfix
